# MyNoneBot

./: .env  .env.template  .gitignore  README.md  bing_cookies_mine.json  bot.py  pyproject.toml  requirements.txt
src/plugins/QQGuild/: __init__.py  config.py  data_source.py
src/plugins/QQGuild/api/: QQGuildAPI.py  __init__.py
src/plugins/QQGuild/db/: __init__.py  model.py
src/plugins/ai_chat/: __init__.py  config.py  data_source.py  redis.py
src/plugins/ai_chat/bot/: __init__.py  base_bot.py  bing_bot.py  doubao_bot.py  ernie_bot.py  gpt_bot.py  tx_bot.py
src/plugins/cheat_report/: __init__.py  common.py  config.py  data_source.py
src/plugins/cheat_report/utils/: common.py  handle.py
src/plugins/cheat_report/utils/file/: __init__.py  base.py  cos.py  local.py
src/plugins/jhapi/: __init__.py  config.py  data_source.py  redis.py
src/plugins/jhapi/object/: __init__.py  jhapi.py
src/plugins/music/: __init__.py  config.py  data_source.py
src/plugins/music/object/: __init__.py  netease_music.py  song_info.py
src/plugins/translate/: __init__.py  config.py  data_source.py
src/plugins/translate/api/: BDTranslator.py  Translator.py  __init__.py
src/plugins/wx_OA/: __init__.py  data_source.py
src/plugins/wx_OA/msg/: receive.py  reply.py
