[project]
name = "MyNoneQQBot2"
version = "0.1.0"
description = "MyNoneQQBot2"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "QQ", module_name = "nonebot.adapters.qq"},
]
plugins = ["nonebot_plugin_guild_patch"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
